<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackgroundBlue"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_fragment"
        android:layout_width="@dimen/reg_dialog_width"
        android:layout_height="@dimen/reg_dialog_height"
        android:background="@drawable/rounded_corner_blue">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/createAccountTextMarginTop"
            android:textColor="@color/errorMessageColor"
            android:visibility="invisible"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:background="@drawable/rounded_corner_yellow"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:hint="@string/user_name"
            android:inputType="textFilter"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_message" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:background="@drawable/rounded_corner_yellow"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/confirm_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:background="@drawable/rounded_corner_yellow"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintBottom_toTopOf="@id/terms"/>

        <CheckBox
            android:id="@+id/terms"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/register"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password"
            android:button="@drawable/check_selector"
            android:text="@string/register_agree"
            android:textColor="@drawable/check_text_color_selector"/>

        <Button
            android:id="@+id/register"
            android:layout_width="@dimen/reg_btn_width"
            android:layout_height="@dimen/reg_btn_height"
            android:layout_marginTop="@dimen/reg_btn_margin_top"
            android:background="@drawable/rounded_button_with_shadow"
            android:elevation="@dimen/elevation"
            android:text="@string/register_button"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terms" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>